--- a/app/src/main/res/layout/activity_normal_game1.xml
+++ b/app/src/main/res/layout/activity_normal_game1.xml
@@ -59,6 +59,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:layout_marginTop="1dp"
+            android:layout_marginBottom="10dp"
             android:layout_weight="1"
             android:text="@string/Find3Cutlery"
             android:textAlignment="center"
