--- a/app/src/main/res/layout/activity_normal_game1.xml
+++ b/app/src/main/res/layout/activity_normal_game1.xml
@@ -69,44 +69,88 @@
     </LinearLayout>
 
 
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="20dp"
+        android:layout_marginTop="10dp"
         android:layout_marginRight="20dp"
+        android:layout_marginBottom="10dp"
         android:layout_weight="0"
         android:orientation="horizontal">
 
-        <ImageButton
-            android:id="@+id/imageButtonNormalCorrect1"
+        <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="70dp"
             android:layout_height="80dp"
-            android:layout_marginRight="5dp"
-            android:layout_weight="1"
-            android:background="@color/white"
-            android:scaleType="centerInside"
-            android:src="@drawable/spoon"/>
+            android:layout_marginRight="10dp"
+            android:layout_weight="1">
 
-        <ImageButton
-            android:id="@+id/imageButtonNormalWrong1"
-            android:layout_width="70dp"
-            android:layout_height="80dp"
-            android:layout_marginLeft="5dp"
-            android:layout_weight="1"
-            android:background="@color/white"
-            android:scaleType="centerInside"
-            android:src="@drawable/fan2" />
+            <ImageButton
+                android:id="@+id/imageButtonNormalCorrect1"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:background="@color/white"
+                android:scaleType="centerInside"
+                android:src="@drawable/spoon" />
 
-        <ImageButton
-            android:id="@+id/imageButtonNormalWrong2"
+            <ImageView
+                android:id="@+id/correctImg1"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:src="@drawable/correct"
+                android:visibility="invisible" />
+        </FrameLayout>
+
+        <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="70dp"
             android:layout_height="80dp"
-            android:layout_marginLeft="5dp"
-            android:layout_weight="1"
-            android:background="@color/white"
-            android:scaleType="centerInside"
-            android:src="@drawable/grounder" />
+            android:layout_marginRight="10dp"
+            android:layout_weight="1">
+
+            <ImageButton
+                android:id="@+id/imageButtonNormalWrong1"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:background="@color/white"
+                android:scaleType="centerInside"
+                android:src="@drawable/fan2" />
+
+            <ImageView
+                android:id="@+id/wrongImg1"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:src="@drawable/wrong"
+                android:visibility="invisible" />
+        </FrameLayout>
+
+        <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            android:layout_width="70dp"
+            android:layout_height="80dp"
+            android:layout_marginRight="10dp"
+            android:layout_weight="1">
+
+            <ImageButton
+                android:id="@+id/imageButtonNormalWrong2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="5dp"
+                android:layout_weight="1"
+                android:background="@color/white"
+                android:scaleType="centerInside"
+                android:src="@drawable/grounder" />
+
+            <ImageView
+                android:id="@+id/wrongImg2"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:src="@drawable/correct"
+                android:visibility="invisible" />
+        </FrameLayout>
 
     </LinearLayout>
 
@@ -120,35 +164,83 @@
         android:layout_weight="0"
         android:orientation="horizontal">
 
-        <ImageButton
-            android:id="@+id/imageButtonNormalWrong3"
+        <FrameLayout
+            xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="70dp"
             android:layout_height="80dp"
-            android:layout_marginRight="5dp"
-            android:layout_weight="1"
-            android:background="@color/white"
-            android:scaleType="centerInside"
-            android:src="@drawable/ang_ku_kueh" />
+            android:layout_marginRight="10dp"
+            android:layout_weight="1">
 
-        <ImageButton
-            android:id="@+id/imageButtonNormalCorrect2"
-            android:layout_width="70dp"
-            android:layout_height="80dp"
-            android:layout_marginLeft="5dp"
-            android:layout_weight="1"
-            android:background="@color/white"
-            android:scaleType="centerInside"
-            android:src="@drawable/cutlery" />
+            <ImageButton
+                android:id="@+id/imageButtonNormalWrong3"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="5dp"
+                android:layout_weight="1"
+                android:background="@color/white"
+                android:scaleType="centerInside"
+                android:src="@drawable/ang_ku_kueh" />
 
-        <ImageButton
-            android:id="@+id/imageButtonNormalWrong4"
+            <ImageView
+                android:id="@+id/wrongImg3"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:src="@drawable/wrong"
+                android:layout_gravity="center"
+                android:visibility="invisible"/>
+        </FrameLayout>
+
+        <FrameLayout
+            xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="70dp"
             android:layout_height="80dp"
-            android:layout_marginLeft="5dp"
-            android:layout_weight="1"
-            android:background="@color/white"
-            android:scaleType="centerInside"
-            android:src="@drawable/birdcage" />
+            android:layout_marginRight="10dp"
+            android:layout_weight="1">
+
+            <ImageButton
+                android:id="@+id/imageButtonNormalCorrect2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="5dp"
+                android:layout_weight="1"
+                android:background="@color/white"
+                android:scaleType="centerInside"
+                android:src="@drawable/cutlery" />
+
+            <ImageView
+                android:id="@+id/correctImg2"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:src="@drawable/correct"
+                android:layout_gravity="center"
+                android:visibility="invisible"/>
+        </FrameLayout>
+
+        <FrameLayout
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            android:layout_width="70dp"
+            android:layout_height="80dp"
+            android:layout_marginRight="10dp"
+            android:layout_weight="1">
+
+            <ImageButton
+                android:id="@+id/imageButtonNormalWrong4"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="5dp"
+                android:layout_weight="1"
+                android:background="@color/white"
+                android:scaleType="centerInside"
+                android:src="@drawable/birdcage" />
+
+            <ImageView
+                android:id="@+id/wrongImg4"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:src="@drawable/wrong"
+                android:layout_gravity="center"
+                android:visibility="invisible"/>
+        </FrameLayout>
 
     </LinearLayout>
 
@@ -162,35 +254,83 @@
         android:layout_weight="0"
         android:orientation="horizontal">
 
-        <ImageButton
-            android:id="@+id/imageButtonNormalWrong5"
+        <FrameLayout
+            xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="70dp"
             android:layout_height="80dp"
-            android:layout_marginRight="5dp"
-            android:layout_weight="1"
-            android:background="@color/white"
-            android:scaleType="centerInside"
-            android:src="@drawable/old_record" />
+            android:layout_marginRight="10dp"
+            android:layout_weight="1">
 
-        <ImageButton
-            android:id="@+id/imageButtonNormalWrong6"
-            android:layout_width="70dp"
-            android:layout_height="80dp"
-            android:layout_marginLeft="5dp"
-            android:layout_weight="1"
-            android:background="@color/white"
-            android:scaleType="centerInside"
-            android:src="@drawable/alarm_clock" />
+            <ImageButton
+                android:id="@+id/imageButtonNormalWrong5"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="5dp"
+                android:layout_weight="1"
+                android:background="@color/white"
+                android:scaleType="centerInside"
+                android:src="@drawable/old_record" />
 
-        <ImageButton
-            android:id="@+id/imageButtonNormalCorrect3"
+            <ImageView
+                android:id="@+id/wrongImg5"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:src="@drawable/wrong"
+                android:layout_gravity="center"
+                android:visibility="invisible"/>
+        </FrameLayout>
+
+        <FrameLayout
+            xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="70dp"
             android:layout_height="80dp"
-            android:layout_marginLeft="5dp"
-            android:layout_weight="1"
-            android:background="@color/white"
-            android:scaleType="centerInside"
-            android:src="@drawable/rice" />
+            android:layout_marginRight="10dp"
+            android:layout_weight="1">
+
+            <ImageButton
+                android:id="@+id/imageButtonNormalWrong6"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="5dp"
+                android:layout_weight="1"
+                android:background="@color/white"
+                android:scaleType="centerInside"
+                android:src="@drawable/alarm_clock" />
+
+            <ImageView
+                android:id="@+id/wrongImg6"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:src="@drawable/wrong"
+                android:layout_gravity="center"
+                android:visibility="invisible"/>
+        </FrameLayout>
+
+        <FrameLayout
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            android:layout_width="70dp"
+            android:layout_height="80dp"
+            android:layout_marginRight="10dp"
+            android:layout_weight="1">
+
+            <ImageButton
+                android:id="@+id/imageButtonNormalCorrect3"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="5dp"
+                android:layout_weight="1"
+                android:background="@color/white"
+                android:scaleType="centerInside"
+                android:src="@drawable/rice" />
+
+            <ImageView
+                android:id="@+id/correctImg3"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:src="@drawable/correct"
+                android:layout_gravity="center"
+                android:visibility="invisible"/>
+        </FrameLayout>
 
 
     </LinearLayout>
