--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,3 +1,5 @@
-<resources>
-    <dimen name="fab_margin">16dp</dimen>
-</resources>
+ <resources>
+        <dimen name="button_width">80%</dimen>
+        <dimen name="button_text_size">30sp</dimen>
+        <dimen name="title_text_size">40sp</dimen>
+    </resources>
