--- a/app/src/main/res/layout/activity_normal_game5.xml
+++ b/app/src/main/res/layout/activity_normal_game5.xml
@@ -315,29 +315,37 @@
     </LinearLayout>
 
     <LinearLayout
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:layout_gravity="center_horizontal"
+        android:orientation="horizontal"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp">
+
         <Button
             android:id="@+id/buttonResult"
-            android:layout_width="220dp"
+            android:layout_width="260dp"
             android:layout_height="64dp"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginTop="15dp"
-            android:layout_marginBottom="16dp"
-            android:layout_weight="0.01"
+            android:layout_marginBottom="15dp"
+            android:layout_weight="1"
             android:background="@drawable/orange_btn"
             android:text="@string/goodJob"
             android:textColor="@color/black"
-            android:textSize="27dp"
+            android:textSize="27sp"
             android:visibility="invisible"
             app:backgroundTint="@null" />
 
-        <ImageView
+        <ImageButton
+            android:id="@+id/buttonUndo"
             android:layout_width="200dp"
             android:layout_height="64dp"
-            app:srcCompat="@drawable/undo__correct_color_"
-            android:visibility="invisible"/>
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="10dp"
+            android:layout_weight="1"
+            android:clickable="true"
+            android:scaleType="centerInside"
+            android:visibility="gone"
+            app:srcCompat="@drawable/undo__correct_color_" />
 
     </LinearLayout>
 
