--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="0.8"
+        android:layout_weight="1.4"
         android:background="@color/bgPurple"
         android:orientation="vertical">
 
@@ -19,59 +19,70 @@
             android:id="@+id/imageView3"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="0.02"
             android:layout_gravity="bottom|end"
             android:layout_marginTop="20dp"
+            android:layout_weight="0.02"
             app:srcCompat="@drawable/logo" />
     </LinearLayout>
 
     <!-- Title -->
-    <TextView
-        android:id="@+id/titleTextView"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/Title"
-        android:textSize="30dp"
-        android:textStyle="bold" />
-    <!-- Increased font size -->
+        android:layout_weight="1.5"
+        android:gravity="center_horizontal"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/titleTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:text="@string/Title"
+            android:textSize="34dp"
+            android:textStyle="bold" />
+
+        <include layout="@layout/button_easy" />
+
+        <include layout="@layout/button_normal" />
+
+        <include layout="@layout/button_expert" />
+
+        <Button
+            android:id="@+id/settingsButton"
+            android:layout_width="250dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="20dp"
+            android:layout_weight="0"
+            android:background="@drawable/orange_btn"
+            android:text="@string/settings"
+            android:textColor="@color/black"
+            android:textSize="30sp"
+            android:textStyle="bold"
+            app:backgroundTint="@null" />
+
+        <Button
+            android:id="@+id/howToPlayButton"
+            android:layout_width="250dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="20dp"
+            android:layout_marginBottom="20dp"
+            android:layout_weight="0"
+            android:background="@drawable/orange_btn"
+            android:text="@string/instructions"
+            android:textColor="@color/black"
+            android:textSize="30sp"
+            android:textStyle="bold"
+            app:backgroundTint="@null" />
+    </LinearLayout>
 
     <!-- Button with one drawable -->
-    <include layout="@layout/button_easy"/>
-    <include layout="@layout/button_normal" />
-    <include layout="@layout/button_expert" />
-
-    <Button
-        android:id="@+id/settingsButton"
-        android:layout_width="250dp"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="20dp"
-        android:layout_weight="0"
-        android:background="@drawable/orange_btn"
-        android:text="@string/settings"
-        android:textColor="@color/black"
-        android:textSize="30sp"
-        app:backgroundTint="@null"
-        android:textStyle="bold"/>
-
-    <Button
-        android:id="@+id/howToPlayButton"
-        android:layout_width="250dp"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="20dp"
-        android:layout_marginBottom="20dp"
-        android:layout_weight="0"
-        android:background="@drawable/orange_btn"
-        android:text="@string/instructions"
-        android:textColor="@color/black"
-        android:textSize="30sp"
-        app:backgroundTint="@null"
-        android:textStyle="bold"/>
 
     <View
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="0.06"
+        android:layout_weight="1"
         android:background="@color/bgPurple" />
 </LinearLayout>
