--- a/app/src/main/res/layout/button_expert.xml
+++ b/app/src/main/res/layout/button_expert.xml
@@ -40,7 +40,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="0.75"
-        android:gravity="center_vertical"
+        android:gravity="center_horizontal|center_vertical"
         android:text="@string/hard"
         android:textColor="@color/black"
         android:textSize="30sp"
